Adding 2 new components (MyActor on accident)

--- a/primm_scratch.uproject
+++ b/primm_scratch.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "primm_scratch",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
