--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/MainLevel.MainLevel
 EditorStartupMap=/Game/MainLevel.MainLevel
+GlobalDefaultGameMode=/Game/GameMode/CustomGameMode.CustomGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
