--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MainLevel.MainLevel
-EditorStartupMap=/Game/MainLevel.MainLevel
+GameDefaultMap=/Game/Maps/MainMenu.MainMenu
+EditorStartupMap=/Game/Maps/AbstractLevel1.AbstractLevel1
 GlobalDefaultGameMode=/Game/GameMode/CustomGameMode.CustomGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
